style: fix vertical overlap of details tag inside admonitions

--- a/src/styles/markdown-extend.styl
+++ b/src/styles/markdown-extend.styl
@@ -7,6 +7,9 @@
       margin-bottom: -.9rem
       font-weight: bold
 
+    details
+      margin-top: 1.5rem
+
       &:before
         content: ' '
         display: inline-block
